# cmake-in-ffmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ffmpeg/: CMakeLists.txt  win32.cmake  win64.cmake
test/: CMakeLists.txt  utils.c  videogen.c
